src/test/custom/invalid/import/circular2.hwacc
import circular1.hwacc 

int f2() is 
  return 2 
end